--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Luqman Asif</title>
 
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./responsive.css">
@@ -213,7 +213,7 @@
                 <div class="box">
                     <i class="fa fa-code "></i>
                     <div class="text">App Design</div>
-                    <p>Using flutter for iOS and Android and an expert vision, I’ll take your application to the next
+                    <p>Using flutter for iOS and Android and an expert vision, I'll take your application to the next
                         level.</p>
                 </div>
                 
@@ -384,20 +384,20 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <form action="#">
+                    <form name="contact" method="POST" data-netlify="true">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" name="name" placeholder="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" name="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" name="subject" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" name="message" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
