--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <link href="./css-circular-prog-bar.css" media="all" rel="stylesheet">
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
